--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 								<li><a href="Main%20page.html">LETTERS</a></li>
 								<li><a href="#">COMICS</a></li>
 								<li><a href="#">PUZZLES</a></li>
-								<li><a href="#">VIDeOS</a></li>
+								<li><a href="#">VIDEOS</a></li>
 								<li><a href="#">FEELINGS</a></li>
 							</ul>
 						</nav>
