--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="Main%20page.html">05.19.2025</a></h1>
+						<h1><a href="index.html">05.19.2025</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="Main%20page.html">LETTERS</a></li>
+								<li><a href="index.html">LETTERS</a></li>
 								<li><a href="#">COMICS</a></li>
 								<li><a href="#">PUZZLES</a></li>
 								<li><a href="#">VIDEOS</a></li>
@@ -70,7 +70,7 @@
 						<!-- Actions -->
 							<section>
 								<ul class="actions stacked">
-									<li><a href="Main%20page.html" class="button large fit">BACK</a></li>
+									<li><a href="index.html" class="button large fit">BACK</a></li>
 								</ul>
 							</section>
 
@@ -92,7 +92,7 @@
 										<a href="#" class="author"><span class="name">plug</span><img src="assets/images/avatar.jpg" alt="" /></a>
 									</div>
 								</header>
-								<a href="Main%20page.html" class="image featured"><img src="assets/images/Peace.jpeg" alt="" /></a>
+								<a href="#" class="image featured"><img src="assets/images/Peace1.jpg" alt="" /></a>
 								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
 								<footer>
 									<ul class="actions">
