--- a/PEACE.html
+++ b/PEACE.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Single - Future Imperfect by HTML5 UP</title>
+		<title>For My Baby</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,14 +18,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="Main%20page.html">05.19.2025</a></h1>
+						<h1><a href="index.html">05.19.2025</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">Lorem</a></li>
-								<li><a href="#">Ipsum</a></li>
-								<li><a href="#">Feugiat</a></li>
-								<li><a href="#">Tempus</a></li>
-								<li><a href="#">Adipiscing</a></li>
+								<li><a href="index.html">LETTERS</a></li>
+								<li><a href="#">COMICS</a></li>
+								<li><a href="#">PUZZLES</a></li>
+								<li><a href="#">VIDEOS</a></li>
+								<li><a href="#">FEELINGS</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
@@ -86,7 +86,7 @@
 						<!-- Actions -->
 							<section>
 								<ul class="actions stacked">
-									<li><a href="Main%20page.html" class="button large fit">BACK</a></li>
+									<li><a href="index.html" class="button large fit">BACK</a></li>
 								</ul>
 							</section>
 
@@ -108,11 +108,12 @@
 									</div>
 								</header>
 								<span class="image featured"><img src="assets/images/Peace1.jpg" alt="" /></span>
-								<p>	On the 27th day of November, we watched LPU's 'Christmas tree lighting' together. Do you remember? Although the so-called-tree's design was a bit distasteful and the lighting wasn't that grand, I still enjoyed watching it because I was with you. We didn't hold hands or kiss, but I felt the tingles one would feel when doing all those.</p>
-								<p>Nunc quis dui scelerisque, scelerisque urna ut, dapibus orci. Sed vitae condimentum lectus, ut imperdiet quam. Maecenas in justo ut nulla aliquam sodales vel at ligula. Sed blandit diam odio, sed fringilla lectus molestie sit amet. Praesent eu tortor viverra lorem mattis pulvinar feugiat in turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce ullamcorper tellus sit amet mattis dignissim. Phasellus ut metus ligula. Curabitur nec leo turpis. Ut gravida purus quis erat pretium, sed pellentesque massa elementum. Fusce vestibulum porta augue, at mattis justo. Integer sed sapien fringilla, dapibus risus id, faucibus ante. Pellentesque mattis nunc sit amet tortor pellentesque, non placerat neque viverra. </p>
+								<p>On the 27th day of November, we watched LPU’s Christmas tree lighting together. Do you remember? Although the so-called tree’s design was a bit distasteful and the lighting wasn’t that grand, I still enjoyed watching it because I was with you. We didn’t hold hands or kiss, but I felt the tingling one would feel when doing all those.</p>
+								<p>Minutes before they turned the lights on, I took my phone out to record the moment because I knew I wouldn’t be looking at the tree when it happened. While everyone gazed at the lights with awe, I stared at the girl beside me. That was the time I understood that my feelings weren’t just a simple high school fascination anymore. For the first time, I found peace in a person, and you didn’t even do anything; you just stood there. Somehow, I felt peaceful just by looking at you. </p>
+								<p>We had been talking for weeks before that day, and you slowly introduced me to some parts of yourself. I never expected you to be that ‘corny’, but I loved it. I didn’t know the “Francheska Jayectin” had that in her. You had interesting quirks, like your obsession with blurting out the word “oten”. I thought you were the kind to give looks at people who say such words, and I love that I was wrong about it. I genuinely found you to be an interesting person. Someone that I was really eager to learn more about. How blessed I am to have been given the chance to get to know you more and, I wish, for the rest of my life.</p>
 								<footer>
 									<ul class="stats">
-										<li><a href="#">General</a></li>
+										<li><a href="#">written with love</a></li>
 										<li><a href="#" class="icon solid fa-heart">3</a></li>
 										<li><a href="#" class="icon solid fa-comment">i love you</a></li>
 									</ul>
