--- a/100.html
+++ b/100.html
@@ -96,8 +96,12 @@
 									</div>
 								</header>
 								<span class="image featured"><img src="assets/images/100%20things.jpg" alt="" /></span>
-								<p>I actually wrote this last month pa. Remember when we were on call and you kept on asking what I was doing, and then I told you I was writing "notes" for Philo? Yeah, I was actually writing this. This was supposed to be given to you handwritten, but then I was contemplating whether to give it you or not cause my handwriting on the letter was so ugly. The letter is 2 bond papers long, back-to-back. No way I'll let you suffer, trying to understand the lopsided sentences I wrote.</p>
-								<p> </p>
+								<p>I actually wrote this last month pa. Remember when we were on call and you kept on asking what I was doing, and then I told you I was writing "notes" for Philo? Yeah, I was actually writing this. This was supposed to be given to you handwritten, but then I was contemplating whether to give it to you or not, cause my handwriting on the letter was so ugly. The letter is 2 bond papers long, back-to-back. No way I'll let you suffer, trying to understand the lopsided sentences I wrote.</p>
+								<p> Cue Music:</p>
+								<span class="image featured"><img src="assets/images/IKYK.png" /></span>
+								<h1>100 Things I love about my baby </h1>
+								<p>1. I love that you're soulful. You feel deeply and understand things from a perspective that is uniquely yours.</p>
+								<p></p>
 								<footer>
 									<ul class="stats">
 										<li><a href="#">written with love</a></li>
