--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 									</div>
 								</header>
 								<a class="image featured"><img src="assets/images/100%20things.jpg" alt="" /></a>
-								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper.</p>
+								<p>I actually wrote this last month pa. Remember when we were on call and you kept on asking what I was doing, and then I told you I was writing "notes" for Philo? Yeah, I was actually writing this...</p>
 								<footer>
 									<ul class="actions">
 										<li><a href="100.html" class="button large">Continue Reading</a></li>
