--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<!-- About -->
 							<section class="blurb">
 								<h2>About</h2>
-								<p>I figured that since I have terrible handwriting, I might as well publish my love letters on a website only you and I know about. They say what gets published on the internet stays in it forever. I wish for our love to be the same. May our 'I love yous' work the same as a post button, and our love be sealed in the universe's database forever.   </p>
+								<p>I figured that since I have terrible handwriting, I might as well publish my love letters on a website only you and I know about. They say what gets published on the internet stays in it forever. I wish for our love to be the same. May our “I love yous” function like a post button, something we send with intention, something that stays. And with that may our love be stored in the universe’s database forever, permanent and impossible to delete. </p>
 								
 							</section>
 
