--- a/100.html
+++ b/100.html
@@ -96,7 +96,7 @@
 									</div>
 								</header>
 								<span class="image featured"><img src="assets/images/100%20things.jpg" alt="" /></span>
-								<p>I actually wrote this last month pa. Remember when we were on call and you kept on asking what I was doing, and then I told you I was writing "notes" for Philo? Yeah, I was actually writing this. This was supposed to be given to you handwritten, but then I was contemplating whether to give it to you or not, cause my handwriting on the letter was so ugly. The letter is 2 bond papers long, back-to-back. No way I'll let you suffer, trying to understand the lopsided sentences I wrote.</p>
+								<p>I actually wrote this last month pa. Remember when we were on call and you kept on asking what I was doing, and then I told you I was writing "notes" for Philo? Yeah, I was actually writing this. This was supposed to be given to you handwritten, but then I contemplated whether to give it to you or not, cause my handwriting on the letter was so ugly. The letter is two bond paper long, back-to-back, oh and it's the long size too. And then I thought, no way I'll let you suffer, trying to understand the messy letters and lopsided sentences I wrote, and so here we are. </p>
 								<p> Cue Music:</p>
 								<div style="text-align: center;">
 								<img src="assets/images/IKYK.png" width="350" height="200" alt="Description of image">
