--- a/PEACE.html
+++ b/PEACE.html
@@ -68,18 +68,7 @@
 											<p>LET'S WITNESS THE WORLD TOGETHER</p>
 										</a>
 									</li>
-									<li>
-										<a href="#">
-											<h3>--- DATES</h3>
-											<p>I RAN OUT OF IDEAS. ANY SUGGESTIONS? </p>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3>--- DATES</h3>
-											<p>I RAN OUT OF IDEAS. ANY SUGGESTIONS?</p>
-										</a>
-									</li>
+									
 								</ul>
 							</section>
 
@@ -107,11 +96,14 @@
 										<a class="author"><span class="name">plug</span><img src="assets/images/avatar.jpg" alt="" /></a>
 									</div>
 								</header>
-								<span class="image featured"><img src="assets/images/Peace1.jpg" alt="" /></span>
+								<span class="image featured"><img src="assets/images/27.jpg" alt="" /></span>
 								<p>On the 27th day of November, we watched LPU’s Christmas tree lighting together. Do you remember? Although the so-called tree’s design was a bit distasteful and the lighting wasn’t that grand, I still enjoyed watching it because I was with you. We didn’t hold hands or kiss, but I felt the tingling one would feel when doing all those.</p>
-								<p>Minutes before they turned the lights on, I took my phone out to record the moment because I knew I wouldn’t be looking at the tree when it happened. While everyone gazed at the lights with awe, I stared at the girl beside me. That was the time I understood that my feelings weren’t just a simple high school crush anymore. For the first time, I found peace in a person, and you didn’t even do anything; you just stood there. Somehow, I felt peaceful just by looking at you. </p>
-								<p>We had been talking for weeks before that day, and you slowly introduced me to some parts of yourself. I never expected you to be that ‘corny’, but I loved it. I didn’t know the “Francheska Jayectin” had that in her. You had interesting quirks, like your obsession with blurting out the word “oten”. I thought you were the kind to give people looks when they say such words, and I love that I was wrong about it. I genuinely found you to be an interesting person. Someone that I was really eager to learn more about. How blessed I am to have been given the chance to get to know you more and, I wish, for the rest of my life.
-</p>
+								<p>Minutes before they turned the lights on, I took my phone out to record the moment because I knew I wouldn’t be looking at the tree when it happened. While everyone gazed at the lights with awe, I stared at the girl beside me. That was the time I understood that my feelings weren’t just a simple high school crush anymore. For the first time, I found peace in a person, and you didn’t even do anything; you just stood there. Somehow, I felt a sense of peace just by looking at you. It was the kind of peace I only feel when I stare at city lights, but even better. </p>
+								<p>We had been talking for weeks before that day, and you have slowly introduced me to some parts of yourself. I never expected you to be that ‘corny’, but I loved it. I didn’t know the “Francheska Jayectin” had that in her. You had interesting quirks, like your obsession with blurting out the word “oten”. I thought you were the kind to give people looks when they say such words, and I love that I was wrong about it. I genuinely found you to be an interesting person. Someone that I was really eager to learn more about. How blessed I am to have been given the chance to get to know you more and, I wish, for the rest of my life.</p>
+								<div style="text-align: center;">
+								<video src="assets/videos/PEACE%20VIDEO.mp4" width="300" height="300" controls></video>
+								</div>
+								<p>Were you annoyed here? HAHA. I'm sorry beb.</p>
 								<footer>
 									<ul class="stats">
 										<li><a href="#">written with love</a></li>
