--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<li><a href="#">COMICS</a></li>
 								<li><a href="#">PUZZLES</a></li>
 								<li><a href="#">VIDEOS</a></li>
-								<li><a href="#">FEELINGS</a></li>
+								<li><a href="#">PICTURES</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
@@ -92,7 +92,7 @@
 										<a href="#" class="author"><span class="name">plug</span><img src="assets/images/avatar.jpg" alt="" /></a>
 									</div>
 								</header>
-								<a href="#" class="image featured"><img src="assets/images/27.jpg" alt="" /></a>
+								<a class="image featured"><img src="assets/images/27.jpg" alt="" /></a>
 								<p>On the 27th day of November, we watched LPU’s Christmas tree lighting together. Do you remember? Although the so-called tree’s design was a bit distasteful and the lighting wasn’t that grand, I still enjoyed watching it because I was with you. We didn’t hold hands or kiss, but I felt the tingling one would feel when doing all those.</p>
 								<footer>
 									<ul class="actions">
