--- a/PEACE.html
+++ b/PEACE.html
@@ -25,7 +25,7 @@
 								<li><a href="#">COMICS</a></li>
 								<li><a href="#">PUZZLES</a></li>
 								<li><a href="#">VIDEOS</a></li>
-								<li><a href="#">FEELINGS</a></li>
+								<li><a href="#">PICTURES</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
