--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<nav class="links">
 							<ul>
 								<li><a href="index.html">LETTERS</a></li>
-								<li><a href="#">COMICS</a></li>
+								<li><a href="COMICS.html">COMICS</a></li>
 								<li><a href="#">PUZZLES</a></li>
 								<li><a href="#">VIDEOS</a></li>
 								<li><a href="#">PICTURES</a></li>
