--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<section>
 								<ul class="links">
 									<li>
-										<a href="#">
+										<a href="COMICS.html">
 											<h3>COMICS</h3>
 											<p>Random comic panels</p>
 										</a>
